# sleeper-analysis

./: .gitignore  DEPLOYMENT.md  LOCAL_DEV.md  Procfile  README.md  TODO.md  claude.md  dashboard.html  debug_faab.py  fetch_leagues.py  generate_reports.py  leagues.json.example  pyproject.toml  railway.json  test_benchwarmer_fix.py  test_faab_fix.py  test_nfl_stats.py  test_roster_construction.py  test_user.py
docs/: app.html  baker-beach-blossoms.html  index-old.html  index.html  supa-flexas.html  tip-your-runningbacks.html
src/sleeper_analytics/: __init__.py  cli.py  config.py  main.py
src/sleeper_analytics/api/: __init__.py  dependencies.py
src/sleeper_analytics/api/routes/: __init__.py  awards.py  benchwarmer.py  draft.py  efficiency.py  faab.py  leagues.py  luck.py  matchups.py  roster_construction.py  trade_analyzer.py  trades.py  transactions.py  viz.py
src/sleeper_analytics/clients/: __init__.py  sleeper.py
src/sleeper_analytics/models/: __init__.py  awards.py  benchwarmer.py  draft.py  faab.py  league.py  lopsided_trades.py  luck.py  matchup.py  player.py  roster_construction.py  trade_analyzer.py  transaction.py
src/sleeper_analytics/services/: __init__.py  benchwarmer.py  draft.py  efficiency.py  faab.py  luck_analysis.py  matchups.py  nfl_stats.py  roster_construction.py  trade_analyzer.py  trades.py
src/sleeper_analytics/visualization/: __init__.py  charts.py
