[project]
name = "sleeper-analytics"
version = "0.1.0"
description = "Fantasy football analytics API for Sleeper leagues with transaction analysis, matchup breakdowns, roster efficiency metrics, and trade value calculations."
readme = "README.md"
authors = [
    { name = "Michael Kwan", email = "michaelkwan@meta.com" }
]
requires-python = ">=3.12"
dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Async HTTP Client
    "httpx>=0.28.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    # NFL Stats
    "nfl-data-py>=0.3.0",
    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Visualization
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
sleeper-api = "sleeper_analytics.main:run"
sleeper-cli = "sleeper_analytics.cli:run_cli"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
